# rust-course-2025-11-20

./: .gitignore  README.md
.github/workflows/: deploy.yml  mdbook.yml
mdbook/: book.toml
mdbook/book/: index.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
mdbook/book/day1/: 01_setup.html  02_fundamentals.html  03_structs_enums.html  04_ownership.html  05_smart_pointers.html
mdbook/book/day2/: 06_collections.html  07_traits.html  08_generics.html  09_pattern_matching.html  10_error_handling.html  11_iterators.html  12_macros.html  13_modules_visibility.html
mdbook/book/day3/: 13_testing.html  14_concurrency.html  15_async.html  16_file_io.html  17_no_std.html  18_build_deploy.html  19_capstone.html
mdbook/book/transfer/: 22_iterators.html  23_macros.html  24_unsafe_ffi.html  25_embedded_hal.html  26_memory_paradigm.html  27_null_safety.html  28_type_differences.html  29_traits_vs_oop.html  32_idiomatic_patterns.html
mdbook/src/: SUMMARY.md  introduction.md
mdbook/src/day1/: 01_setup.md  05_smart_pointers.md
mdbook/src/day2/: 06_collections.md  07_traits.md  08_generics.md  09_pattern_matching.md  10_error_handling.md  12_macros.md  12_modules_visibility.md  13_modules_visibility.md
mdbook/src/day3/: 13_testing.md  14_concurrency.md  15_async.md  16_file_io.md  17_no_std.md  18_build_deploy.md  19_capstone.md
mdbook/src/transfer/: 11_iterators.md  12_macros.md  13_memory_paradigm.md  14_null_safety.md  15_type_differences.md  16_traits_vs_oop.md  17_workflow.md  18_unsafe_ffi.md  20_idiomatic_patterns.md  23_macros.md  24_unsafe_ffi.md  25_embedded_hal.md  26_memory_paradigm.md  27_null_safety.md  28_type_differences.md  29_traits_vs_oop.md  31_performance.md  32_idiomatic_patterns.md
solutions/day2/: Cargo.toml
solutions/day2/src/: main.rs
solutions/day3/capstone/: Cargo.toml
solutions/day3/capstone/temp_async/: Cargo.toml
solutions/day3/capstone/temp_core/: Cargo.toml
solutions/day3/capstone/temp_embedded/: Cargo.toml
solutions/day3/capstone/temp_esp32/: Cargo.toml
solutions/day3/capstone/temp_esp32/src/: main.rs
solutions/day3/capstone/temp_protocol/: Cargo.toml
solutions/day3/capstone/temp_store/: Cargo.toml
