[package]
name = "temp_embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7"
temp_core = { path = "../temp_core", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
postcard = { version = "1.0", default-features = false, features = ["heapless"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
std = []
