[package]
name = "temp_esp32"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "temp_esp32"
path = "src/main.rs"

[dependencies]
temp_embedded = { path = "../temp_embedded" }
temp_core = { path = "../temp_core", default-features = false }
heapless = "0.7"
libm = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"
serde_json = { version = "1.0", optional = true }

# ESP32 hardware dependencies (enabled for hardware feature)
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"], optional = true }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c3"], optional = true }
esp-println = { version = "0.12", features = ["esp32c3", "log"], optional = true }
critical-section = { version = "1.2.0", optional = true }

[features]
default = ["hardware"]
simulation = ["temp_embedded/std", "serde_json"]
hardware = ["esp-bootloader-esp-idf", "esp-hal", "esp-println", "critical-section"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
